--- a/info.toml
+++ b/info.toml
@@ -1,4 +1,5 @@
-name     = "DiviveMapsPlugin"
-author   = "Fontur"
+[meta]
+name = "DiviveMapsPlugin"
+author = "Fontur"
 category = "Testing"
-version  = "1.0.0"
+version = "1.0.0"
